# indexer-rs

./: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  Cargo.toml  README.md  docker-compose.yml
grafana/dashboards/: indexer-overview.json
grafana/provisioning/dashboards/: dashboard.yml
libs/indexer-db/migrations/: 20250101000000_rename_is_final_to_is_processed.sql  20250101000001_create_blocks_table.sql  20251218133955_create_usdt_transfers_table.sql  20251218135430_add_chains.sql  20251221083325_add_last_synced_block_hash.sql  20251231063226_add_is_final_to_evm_logs.sql
libs/indexer-db/src/: entity.rs
libs/indexer-db/src/entity/: blocks.rs  evm_logs.rs  evm_sync_logs.rs  usdt_transfers.rs
libs/indexer-metrics/: Cargo.toml
libs/indexer-metrics/src/: lib.rs
listener/: Cargo.toml
listener/src/: error.rs  main.rs  metrics_server.rs  service.rs
processor/: Cargo.toml
processor/src/: contracts.rs  error.rs  main.rs  service.rs
processor/src/contracts/: contract_handler.rs  usdt.rs
prometheus/: prometheus.yml
