
[package]
name = 'processor'
version = '0.0.8'
edition = '2021'

[dependencies]
alloy = { workspace = true }
indexer-db = { path = '../libs/indexer-db', version = '0.0.10' }
indexer-metrics = { path = '../libs/indexer-metrics', version = '0.1.0' }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
